Fixed issues with the sticky footer, header spacing, and right-side alignment of the map in the result div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,7 @@ html, body {
 }
 
 body {
-     grid-template-rows: auto;
-    float:center;
+    grid-template-rows: auto;
     background-color: black;
      
   }
@@ -54,7 +53,7 @@ body {
 }
 
 .sounds-good{ /* MJ */
-  float: left;
+  /*float: left;*/
   font-family: 'Fugaz One';
   color: white;
   margin-right: 20px;
@@ -110,7 +109,7 @@ margin-bottom: 5px;
  left: 0px;
  height: 20%;
  width:100%;
- z-index: 2;
+ z-index: 11;
   }
 
   .nav{
@@ -121,9 +120,9 @@ margin-bottom: 5px;
  z-index: 1;
 
   }
-  .result{
+  /*.result{
   margin-top:150px;
-  }
+  }*/
 
   #notFooter {
     min-height: 100%;
@@ -293,7 +292,6 @@ hr {
      height:165px;
         width:100%;
         margin-bottom: 10%;
-     z-index: 2;
       }
     
       .nav{
